# rtldavis

./: .gitignore  AGENTS.md  BUTTONS.md  PI_BOOT_SETUP.md  RADIO_CC1101.md  README.md  README_PYTHON.md  check_rtlsdr_structure.py  debug_rtlsdr.py  dump_out.txt  go.mod  inspect_aio.py  inspect_rtlsdr.py  inspect_rtlsdr_instance.py  inspect_rtlsdr_lib.py  inspect_rtlsdr_more.py  install.sh  install_librtlsdr.sh  pyproject.toml  scratch_burst.py  scratch_crc.py  scratch_freq.py  test_rtl433.py  test_tx.py
debug_tools/: dump_iq.py  prove_cc1101.py  scratch_burst.py  scratch_crc.py  scratch_freq.py  test_rtl433.py  test_tx.py
dsp/: dsp_test.go
src/rtldavis/: __init__.py  __main__.py  bme280_reader.py  buttons.py  cc1101.py  crc.py  decoder_tool.py  dsp.py  hopper.py  imports_test.py  integrations.py  mqtt.py  protocol.py  replay.py  rest_api.py  sensor_classes.py  sensor_store.py  sensor_store_test.py  test_dsp.py  websocket_server.py  worker.py
src/rtldavis/decoders/: __init__.py  bme280_internal.py  common.py  humidity.py  humidity_test.py  light.py  rain.py  rain_rate.py  rain_test.py  solar.py  supercap.py  temperature.py  temperature_test.py  uv.py
src/rtldavis/runners/: cc1101.py  dual.py  rtlsdr.py
tests/: test_dsp.py  test_mqtt_aggregation.py  test_protocol.py
