[build-system]
requires = ["hatchling>=1.25", "setuptools>=60.0.0"]
build-backend = "hatchling.build"

[project]
name = "rtldavis"
version = "0.1.0"
description = "Python reimplementation of a Davis Instruments wireless weather station receiver using RTL-SDR."
readme = "README_PYTHON.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["rtl-sdr", "davis", "weather", "sdr", "receiver", "dsp"]
dependencies = [
    "pyrtlsdr~=0.3.0",
    "six~=1.16.0",
    "numpy~=1.26.0",
    "setuptools~=75.0.0",
    "paho-mqtt~=2.1.0",
    "ruff~=0.14.9"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering",
  "Topic :: Communications :: Ham Radio",
]

[project.scripts]
rtldavis = "rtldavis.__main__:main"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/bemasher/rtldavis"
