[build-system]
requires = ["hatchling>=1.25", "setuptools>=60.0.0"]
build-backend = "hatchling.build"

[project]
name = "rtldavis"
version = "0.1.0"
description = "Python reimplementation of a Davis Instruments wireless weather station receiver using RTL-SDR."
readme = "README_PYTHON.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
keywords = ["rtl-sdr", "davis", "weather", "sdr", "receiver", "dsp"]
dependencies = [
    "pyrtlsdr~=0.3.0",
    "numpy~=2.4",
    "setuptools~=75.0",
    "paho-mqtt~=2.1",
    "ruff~=0.15",
    "smbus2~=0.4.3",
    "RPi.bme280~=0.2.4",
    "spidev~=3.6; sys_platform == 'linux'",
    "websockets~=12.0",
    "gpiozero~=2.0",
    "RPi.GPIO~=0.7.1; sys_platform == 'linux'",
    "rpi-lgpio~=0.4; sys_platform == 'linux'",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering",
  "Topic :: Communications :: Ham Radio",
]

[project.scripts]
rtldavis = "rtldavis.__main__:main"

[project.optional-dependencies]
test   = ["pytest~=9.0"]
cc1101 = ["spidev"]

[project.urls]
Homepage = "https://github.com/bemasher/rtldavis"
